--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-ಠдಠ
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body{
+   background: url("http://i2.kym-cdn.com/entries/icons/original/000/000/428/1.jpg") no-repeat center center fixed;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+}
+</style>
+</head>
+
+<body>
+
+
+</body>
+</html>
+
